# SUI_Matcher

./: .dockerignore  .gitignore  .gitleaks.toml  404.html  CODEOWNERS  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  DockerFile  LICENCE  LICENSE  Makefile  NuGet.config  README.md  README_Clients_User_Manual.md  docker-compose.yml  global.json  index.html  mise.toml  run-tests-local.ps1  sui-matching.sln  test_and_cover.ps1  tests.runsettings
.config/: dotnet-tools.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.husky/: task-runner.json
SUI.Azure.BlobStorage.Container.Sync/: Program.cs  SUI.Azure.BlobStorage.Container.Sync.csproj
SUI.Client.Console/: Program.cs  SUI.Client.Console.csproj  appsettings.json
SUI.Client.Core.Test/: SUI.Client.Core.Test.csproj  (+1 more)
documentation/: .readthedocs.yaml  README.md  README.txt  mkdocs.yml  pyproject.toml  requirements.txt  suifilestructure.md
documentation/adrs/: 001-initial_approach.md  002-client_distribution.md  003-audit-logging.md  004-event-client.md
documentation/docs/: adrs.md  architecture.md  cicd.md  clientarchitecture.md  gettingstarted.md  index.md  reconciliation.md  waysof.md
documentation/docs/design/: azure-deployment-stacks-spike.md  infra-stack-segregation.md
documentation/docs/matching-algorithm/: overview.md  rules.md  strategies.md
documentation/docs/reconciliation/: address_parsing.md  reconciliation.md
documentation/docs/runbooks/: blob-processor-local-runbook.md
documentation/docs/strategies/: rules.md  strategies.md  strategy3.md
(+881 files in other folders)
