[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["Ed Hiley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
markdown-include = "^0.8.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
pymdown-extensions = "^10.14.3"
mkdocs-mermaid2-plugin = {extras = ["test"], version = "^1.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
